@@ -519,10 +519,21 @@
 ;; compilation, so if they've done that we should do the same for project JVMs
 (def tiered-jvm-opts
   (if (.contains (or (System/getenv "LEIN_JVM_OPTS") "") "Tiered")
-    ["-XX:+TieredCompilation" "-XX:TieredStopAtLevel=1"
-     "-XX:-OmitStackTraceInFastThrow"]
-    ["-XX:-OmitStackTraceInFastThrow"]))
+    ["-XX:+TieredCompilation" "-XX:TieredStopAtLevel=1"]))
 
+;; give reasonable -Xmx defaults when containerized, if JVM is new enough
+;; https://blogs.oracle.com/java-platform-group/java-se-support-for-docker-cpu-and-memory-limits
+(def ^:private cgroups-jvm-opts
+  ;; this assumes the JVM version Leiningen is run under matches the project
+  (let [[v u] (re-seq #"[^-_]+" (System/getProperty "java.runtime.version"))]
+    (if (or (and (= v "1.8.0") (>= (Integer. u) 131))
+            (not= v "1.7.0")
+            (not= v "1.6.0"))
+      ["-XX:+UnlockExperimentalVMOptions" "-XX:+UseCGroupMemoryLimitForHeap"])))
+
+(def default-jvm-opts
+  [;; actually does the opposite; omits trace unless this is set
+   "-XX:-OmitStackTraceInFastThrow"])
 
 (def default-profiles
   "Profiles get merged into the project map. The :dev, :provided, and :user
@@ -530,7 +541,9 @@
   (atom {:default [:leiningen/default]
          :leiningen/default [:base :system :user :provided :dev]
          :base {:resource-paths ^:default-path/dev-resources ["dev-resources"]
-                :jvm-opts (with-meta tiered-jvm-opts
+                :jvm-opts (with-meta `[~@default-jvm-opts
+                                       ~@tiered-jvm-opts
+                                       ~@cgroups-jvm-opts]
                             {:displace true})
                 :test-selectors {:default (with-meta '(constantly true)
                                             {:displace true})}
